--- a/src/main/resources/templates/homePage/index.html
+++ b/src/main/resources/templates/homePage/index.html
@@ -7,33 +7,50 @@
 
 <body>
 
-	<!-- Header START -->
-	<div th:replace="~{homePage/fragments/navHeader :: navHeader}"></div>
-	<!-- Header END -->
+<!-- Header START -->
+<div th:replace="~{homePage/fragments/navHeader :: navHeader}"></div>
+<!-- Header END -->
 
-	<!-- **************** MAIN CONTENT START **************** -->
-	<div th:replace="~{homePage/fragments/mainContent :: mainContent}"></div>
-	<!-- **************** MAIN CONTENT END **************** -->
+<!-- **************** MAIN CONTENT START **************** -->
+<div th:replace="~{homePage/fragments/mainContent :: mainContent}"></div>
+<!-- **************** MAIN CONTENT END **************** -->
 
-	<!-- =======================
+<!-- =======================
 Footer START -->
-	<div th:replace="~{homePage/fragments/footer :: footer}"></div>
-	<!-- =======================
+<div th:replace="~{homePage/fragments/footer :: footer}"></div>
+<!-- =======================
 Footer END -->
 
-	<!-- Back to top -->
-	<div class="back-top"><i class="bi bi-arrow-up-short position-absolute top-50 start-50 translate-middle"></i></div>
+<!-- Back to top -->
+<div class="back-top"><i class="bi bi-arrow-up-short position-absolute top-50 start-50 translate-middle"></i></div>
 
-	<!-- Bootstrap JS -->
-	<script src="assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<!-- jQuery LUÔN ĐỂ TRƯỚC các file khác -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-	<!-- Vendors -->
-	<script src="assets/vendor/tiny-slider/tiny-slider.js"></script>
-	<script src="assets/vendor/glightbox/js/glightbox.js"></script>
-	<script src="assets/vendor/purecounterjs/dist/purecounter_vanilla.js"></script>
+<!-- Bootstrap JS -->
+<script src="assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
-	<!-- Template Functions -->
-	<script src="assets/js/functions.js"></script>
+<!-- Các vendor khác -->
+<script src="assets/vendor/tiny-slider/tiny-slider.js"></script>
+<script src="assets/vendor/glightbox/js/glightbox.js"></script>
+<script src="assets/vendor/purecounterjs/dist/purecounter_vanilla.js"></script>
+
+<!-- Template Functions -->
+<script src="assets/js/functions.js"></script>
+
+<!-- Biến allCategories từ Thymeleaf -->
+<script th:inline="javascript">
+	/*<![CDATA[*/
+	var allCategories = /*[[${allCategories}]]*/ [];
+	/*]]>*/
+	console.log(allCategories);
+</script>
+
+<!-- File JavaScript của bạn -->
+<script src="js/homePage/home.js"></script>
+
+
+
 
 </body>
 
