--- a/src/main/resources/templates/adminDashBoard/fragments/courseTableRowContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/courseTableRowContent.html
@@ -43,11 +43,17 @@
     </tr>
 </div>
 
-<div th:fragment="coursePagination">
-    <nav class="mt-4" aria-label="navigation" th:if="${totalPages > 0}">
-        <ul class="pagination pagination-soft rounded justify-content-end">
+<div th:fragment="coursePagination" class="d-sm-flex justify-content-sm-between align-items-sm-center mt-2">
+    <div class="mb-0 text-center text-sm-start">
+        Showing <b th:text="${listCourse.size()}"></b> out of <b th:text="${totalItems}"></b> entries
+    </div>
+    <p class="mb-0 text-center text-sm-start" th:if="${totalItems == 0}">
+        No entries found
+    </p>
+    <nav  class="d-flex justify-content-center mb-0" aria-label="navigation" th:if="${totalPages > 0}">
+        <ul class="pagination pagination-sm pagination-primary-soft d-inline-block d-md-flex rounded mb-0">
             <!-- First Page -->
-            <li class="page-item" th:classappend="${currentPage == 0} ? 'disabled'">
+            <li class="page-item mb-0" th:classappend="${currentPage == 0} ? 'disabled'">
                 <a class="page-link" th:data-page="0" href="#" tabindex="-1" title="First">
                     <i class="fas fa-angle-double-left"></i>
                 </a>
@@ -58,31 +64,31 @@
                               endPage=${currentPage + 2 >= totalPages ? totalPages - 1 : currentPage + 2}">
 
                 <!-- Show first page if not in range -->
-                <li class="page-item" th:if="${startPage > 0}">
+                <li class="page-item mb-0" th:if="${startPage > 0}">
                     <a class="page-link" th:data-page="0" th:text="1" href="#"></a>
                 </li>
-                <li class="page-item disabled" th:if="${startPage > 1}">
+                <li class="page-item disabled mb-0" th:if="${startPage > 1}">
                     <span class="page-link">..</span>
                 </li>
 
                 <!-- Page range -->
-                <li class="page-item"
+                <li class="page-item mb-0"
                     th:each="i : ${#numbers.sequence(startPage, endPage)}"
                     th:classappend="${currentPage == i} ? 'active'">
                     <a class="page-link" th:data-page="${i}" th:text="${i + 1}" href="#"></a>
                 </li>
 
                 <!-- Show last page if not in range -->
-                <li class="page-item disabled" th:if="${endPage < totalPages - 2}">
+                <li class="page-item disabled mb-0" th:if="${endPage < totalPages - 2}">
                     <span class="page-link">..</span>
                 </li>
-                <li class="page-item" th:if="${endPage < totalPages - 1}">
+                <li class="page-item mb-0" th:if="${endPage < totalPages - 1}">
                     <a class="page-link" th:data-page="${totalPages - 1}" th:text="${totalPages}" href="#"></a>
                 </li>
             </th:block>
 
             <!-- Last Page -->
-            <li class="page-item" th:classappend="${currentPage + 1 >= totalPages} ? 'disabled'">
+            <li class="page-item mb-0" th:classappend="${currentPage + 1 >= totalPages} ? 'disabled'">
                 <a class="page-link" th:data-page="${totalPages - 1}" href="#" title="Last">
                     <i class="fas fa-angle-double-right"></i>
                 </a>
