--- a/src/main/resources/templates/instructorDashboard/fragments/courseDetailContent.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/courseDetailContent.html
@@ -215,7 +215,7 @@
                         <div class="row align-items-center">
                           <div class="col-md-6">
                             <h5 class="mb-1">
-                              <a href="#" th:text="${lesson.title}" th:attr="data-videoid=${lesson.video.videoUrl}" class="lesson-video-link custom-link"></a>
+<!--                              <a href="#" th:text="${lesson.title}" th:attr="data-videoid=${lesson.video.videoUrl}" class="lesson-video-link custom-link"></a>-->
                             </h5>
                             <p class="mb-0 text-muted small" th:text="${lesson.description}"></p>
                           </div>
